# mailsafepro-java

./: .coverage  .coveragerc  .dockerignore  .env  .env.bak  .env.example  .env.production  .env.test.example  .gitignore  .pre-commit-config.yaml  AUDIT.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  FEATURES.md  IDEMPOTENCY_GUIDE.md  Makefile  PUBLISH_CSHARP_MANUAL.md  README.md  SECURITY_ALERTS_SUMMARY.md  SECURITY_CLEANUP_ALL.md  SECURITY_FIX_SUMMARY.md  SECURITY_INCIDENT_RESPONSE.md  VERSIONING.md  bandit_report.json  bandit_report_final.json  bandit_report_v2.json  bandit_report_v3.json  benchmark_phase7.py  build.gradle  build.sbt  change_plan.py  check_undefined.py  coverage.json  create_api_key.py  docker-compose.observability.yml  docker-compose.yml  dockerfile  dump.rdb  enviaremail.py  (+23 more)
.github/: README.md  dependabot.yml
.openapi-generator/: FILES
alertmanager/: alertmanager.yml
api/: openapi.yaml
app/: advanced_rate_limiting.py  api_keys.py  asgi_middleware.py  auth.py  cache.py  cache_warming.py  config.py  connection_pooling.py  dynamic_quotas.py  email_service.py  error_handling.py  exceptions.py  health_checks.py  idempotency.py  idempotency_decorator.py  json_utils.py  logger.py  main.py  metrics.py  middleware.py  models.py  providers.py  redis_client.py  redis_utils.py  request_logging.py  smtp.py  structured_logging.py  test_api_keys.sh  tracing.py  utils.py  validation.py  worker.py
dashboard/: .env  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
docs/: APIKeyCreateRequest.md  APIKeyListResponse.md  (+19 more)
(+466 files in other folders)
